--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -16,6 +16,6 @@
   <body>
     <div id="main" ></div>
 
-    <script src="{% static "frontend/main.js" %}"></script>
+    <script src="static/frontend/main.js"></script>
   </body>
 </html>
