--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -11,11 +11,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <link rel="stylesheet" type="text/css" href="static/css/index.css"/>
+    <link rel="stylesheet" href="{% static "css/index.css" %}"/>
   </head>
   <body>
     <div id="main" ></div>
 
-    <script src="static/frontend/main.js"></script>
+    <script src="{% static "frontend/main.js" %}"></script>
   </body>
 </html>
